# betere-buienradar

./: .gitignore  README.md  get_ftp_data.ipynb  get_ftp_data.py  pyproject.toml  read_data.ipynb  read_data.py  test_gdal.ipynb  test_gdal.py
data/: KMDS__OPER_P___10M_OBS_L2_0020.nc  RAD_NL25_RAC_RT_0825.h5  geojson.json  test.tif  test2.tif
data/vector/: n.dbf  n.shp  n.shx
src/betere-buienradar/: app.py
src/notebooks/: exploration.py
