[tool.poetry]
name = "betere-buienradar"
version = "0.1.0"
description = ""
authors = ["jobvisser03 <jobvisserhcm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
plotly = "jupyterlab"
black = "^19.10b0"
netCDF4 = "^1.5.3"
streamlit = "^0.57.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
