[tool.poetry]
name = "betere-buienradar"
version = "0.1.0"
description = ""
authors = ["jobvisser03 <jobvisserhcm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
plotly = "jupyterlab"
black = "^19.10b0"
jupyterlab = "^2.1.0"
rasterio = "^1.1.3"
matplotlib = "^3.2.1"
jupytext = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
