[tool.poetry]
name = "betere-buienradar"
version = "0.1.0"
description = ""
authors = ["jobvisser03 <jobvisserhcm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
plotly = "~5.13.1"
rasterio = "^1.3.6"
matplotlib = "^3.7.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
